# nofi-games

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  capacitor.config.ts  index.html  middleware.ts  package-lock.json  package.json  tsconfig.json  tycoon.html  vercel.json  vite.config.ts  vitest.autoplay.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  weekly-analysis.yml
android/app/: build.gradle
api/: chat.ts  compile-status.ts  health.ts  sandpack-proxy.ts
api/session/: create.ts
configs/: builder.json
docs/: github-app-setup.md
docs/plans/: dice-tycoon-pixi.md  dice-tycoon.md  social-vibing-builder.md
docs/research/: cross-platform-controls.md  stack-tower-2d-iso.md  tetris-controls.md
docs/review/: block-drop-review.md  phase1-foundation.md
docs/workflow/: improvement-loop.md
prompts/: engine-api.md  game-builder.md
public/: privacy.html  robots.txt  sitemap.xml  terms.html
scripts/: analyze.mjs  gen-dictionary.mjs  migrate.mjs  scan.js  sync-sandpack-bundler.js
scripts/autoplay/: autoplay.test.ts  report.ts  runner.ts
src/: app.ts  main.ts  sw.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/builder/: BuilderApp.tsx  main.tsx
src/engine/: GameEngine.ts  input.ts
src/games/: icons.ts  registry.ts
src/remix/: RemixOverlay.tsx  mount.ts
src/storage/: daily.ts  gameState.ts  quickWins.ts  scores.ts
src/styles/: app.css  theme.css
src/telemetry/: client.ts  consent.ts  deviceId.ts  enrich.ts  queue.ts
src/tycoon/: app.ts  layout.ts  main.ts  tycoon.css
src/utils/: rng.ts  (+5 more)
tests/: setup.ts
(+138 files in other folders)
