[package]
name = "proplay"
version = "1.0.0"
description = "NoFi Games - Casual offline games collection"
authors = []
edition = "2021"

[lib]
name = "proplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
